--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WeatherTracker</title>
+  <title>Local, National, & Global Daily Weather Forecast</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/logo.jpg">
 </head>
 <body>
   <app-root></app-root>
